--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,17 +1,9 @@
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-<div *ngIf="messageService.messages.length">
-  <div *ngFor='let message of messageService.messages'>
+<div *ngIf="messageService.messages !== ''">
     <div class="alert alert-primary alert-dismissible fade show" role="alert">
-      {{message}}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      {{messageService.messages}}
+      <button type="button" class="close" (click)="clear()" >
         <span aria-hidden="true">&times;</span>
       </button>
-    </div>
   </div>
 
 </div>
