--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,12 +20,16 @@
 <!-- <app-heroes></app-heroes>
 <app-messages></app-messages> -->
 
-<app-messages></app-messages>
 <h1>{{title}}</h1>
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/users">Users</a>
-   <a routerLink="/admin" routerLinkActive="active">Admin</a>
+   <a routerLink="/admin" >Admin</a>
 </nav>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-messages></app-messages>
+  <div class="row justify-content-center">
+    <router-outlet></router-outlet>
+  </div>
+</div>
